Update some classes to Harmony versions.